--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,8 +2,7 @@ version: 0.2
 
 env:
   variables:
-    ECR_REPOSITORY: <your-ecr-repository>
-
+    ECR_REPOSITORY: 731188790587.dkr.ecr.ap-northeast-1.amazonaws.com/test-ecr-qian
 phases:
   pre_build:
     commands:
